HTTP-Connection-Manager/httproute-header-match/front-envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    name: listener_http
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: vh_001
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                  headers:
                  - name: X-Canary
                    exact_match: "true"
                route:
                  cluster: ver-1.7-pre
              - match:
                  prefix: "/"
                  query_parameters:
                  - name: "username"
                    string_match:
                      prefix: "vip_"
                route:
                  cluster: ver-1.6
              - match:
                  prefix: "/"
                route:
                  cluster: ver-1.5
          http_filters:
          - name: envoy.router

  clusters:
  - name: ver-1.5
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: ver-1.5
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ver-1.5
                port_value: 80

  - name: ver-1.6
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: ver-1.6
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ver-1.6
                port_value: 80

  - name: ver-1.7-pre
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: ver-1.7-pre
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ver-1.7-pre
                port_value: 80
